[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet-dllm"
version = "1.0.0"
description = "BitNet 1.58-bit Masked Diffusion Language Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Valerka1292", email = "valerka1292@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "datasets>=2.14.0",
    "accelerate>=0.28.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/valerka1292/bitnet-dllm"
Repository = "https://github.com/valerka1292/bitnet-dllm"
BugTracker = "https://github.com/valerka1292/bitnet-dllm/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bitnet_dllm*"]
